# rggobi

./: .Rbuildignore  .gitignore  .travis.yml  CHANGELOG  DESCRIPTION  LICENSE  NAMESPACE  NEWS  README.md  cleanup  configure.in  cran-comments.md  load.r  rggobi.Rproj  start.r
R/: call.r  data.r  datasets.r  display-modes.r  display-tour.r  display-variables.r  display.r  displays.r  edges.r  ggobi.r  glyphs.r  gtk.r  longitudinal.r  plot.r  save-picture.r  syms.r  tour.r  zzz.r
data/: stormtracks.rda
demo/: 00Index  ball.R
man/: GGobi-ai.rd  GGobiCall-n1.rd  GGobiData-class.rd  addVariable-ggobiDataset-u7.rd  as-RGtkObject-8g.rd  as-data-frame-GGobiData-10.rd  as-data-frame-GGobiData-i6.rd  as-data-frame-ggobiDataset-8q.rd  check-versions-qe.rd  check-versions-xs.rd  clean-ggobi-bw.rd  close-GGobi-jj.rd  close-GGobi-kz.rd  close-GGobiDisplay-3v.rd  close-GGobiDisplay-ke.rd  close-ggobi-gk.rd  closeGGobiGGobi-zw.rd  colorscheme--b2.rd  colorscheme-6n.rd  connecting-edges-cn.rd  connecting-edges-vf.rd  create-time-edges-for-unit-fp.rd  create-time-edges-ha.rd  dataset-GGobiDisplay-f1.rd  dataset-GGobiDisplay-gk.rd  dataset-mn.rd  dataset-numeric-gd.rd  dataset-numeric-h2.rd  dataset-up.rd  dim-GGobiData-9t.rd  dim-GGobiData-ok.rd  dim-ggobiDataset-yy.rd  dimnames---GGobiData-ds.rd  dimnames-GGobiData-ib.rd  dimnames-GGobiData-x0.rd  dimnames-ggobiDataset-1n.rd  display-GGobiData-iu.rd  display-GGobiData-vz.rd  display-ce.rd  displays-GGobi-4v.rd  (+142 more)
src/: Makevars.in  Makevars.win  Makevars.win.in  RSCommon.h  RSEval.c  RSGGobi.h  RSGGobiEntryPoints.h  RUtils.h  data.c  (+24 more)
(+33 files in other folders)
